--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -14,7 +14,7 @@
 			<div class="col-6">
 			</div>
 			<div class="col-6 text-end">
-				<a asp-controller="Product" asp-action="Create" class="btn btn-primary rounded-pill">
+				<a asp-controller="Product" asp-action="Upsert" class="btn btn-primary rounded-pill">
 					<i class="bi bi-plus-circle"></i>	Create New Product
 				</a>
 			</div>
@@ -46,7 +46,7 @@
 						</td>
 						<td>
 							<div class="w-75 btn-group" role="group">
-								<a asp-controller="Product" asp-action="Edit"
+								<a asp-controller="Product" asp-action="Upsert"
 								   asp-route-id="@Product.Id"
 								   class="btn btn-primary mx-2 rounded">
 									<i class="bi bi-pencil-square"></i> Edit
