--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -19,7 +19,7 @@
 				</a>
 			</div>
 		</div>
-		<table class="table table-bordered table-striped">
+		<table id="tblData" class="table table-bordered table-striped" style="width: 100%">
 			<thead>
 				<tr>
 					<th>Title</th>
@@ -30,40 +30,10 @@
 					<th></th>
 				</tr>
 			</thead>
-			<tbody>
-				@foreach (var product in Model)
-				{
-					<tr>
-						<td>@product.Title</td>
-						<td>
-							@product.ISBN
-						</td>
-						<td>
-							@product.ListPrice
-						</td>
-						<td>
-							@product.Author
-						</td>
-						<td>
-							@product.Category.Name
-						</td>
-						<td>
-							<div class="w-75 btn-group" role="group">
-								<a asp-controller="product" asp-action="Upsert"
-								   asp-route-id="@product.Id"
-								   class="btn btn-primary mx-2 rounded">
-									<i class="bi bi-pencil-square"></i> Edit
-								</a>
-								<a asp-controller="product" asp-action="Delete"
-								   asp-route-id="@product.Id"
-								   class="btn btn-outline-danger mx-2 rounded">
-									<i class="bi bi-trash-fill"></i> Delete
-								</a>
-							</div>
-						</td>
-					</tr>
-				}
-			</tbody>
 		</table>
 	</div>
 </div>
+
+@section Scripts{
+	<script src="~/js/product.js"></script>
+}
