--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -5,7 +5,7 @@
 		<div class="row">
 			<div class="col-12 text-center">
 				<h2 class="text-white py-2">
-					@(Model.Product.Id != 0 ? "Update" : "Create")
+					@(Model.Product.Id != 0 ? "Update" : "Create") Product
 				</h2>
 			</div>
 		</div>
@@ -18,7 +18,7 @@
 				<div class="col-10">
 					<div class="border p-3">
 						@*<div asp-validation-summary="All"></div>*@
-						<div class="py-2 col-12">
+						<div class="form-floating py-2 col-12">
 							<input asp-for="Product.Title" class="form-control border-0 shadow" />
 							<label asp-for="Product.Title" class="ms-2"></label>
 							<span asp-validation-for="Product.Title" class="text-danger"></span>
